fix: Resolve all remaining compilation errors and achieve clean build
- Fix UUID/Long conversion errors across controllers and services
- Update AdminOrderController to use UUID path variables consistently
- Fix StoreOrderController UUID parameter types
- Correct OrderManagementService entity field access and UUID conversions
- Add missing NotificationService methods (sendInvoiceEmail, sendRefundConfirmationEmail)
- Fix OrderService Cart entity method calls (getItems() vs getCartItems())
- Update DTOs to use String IDs for UUID consistency
- Fix InvoiceService and RefundService UUID parameter types
- Add missing UUID imports where needed
- Correct PaymentService result handling (record accessor methods)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>